--- a/Android/app/src/main/res/layout/activity_conv.xml
+++ b/Android/app/src/main/res/layout/activity_conv.xml
@@ -14,4 +14,12 @@
         tools:layout_editor_absoluteX="160dp"
         tools:layout_editor_absoluteY="272dp" />
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Back"
+        tools:layout_editor_absoluteX="62dp"
+        tools:layout_editor_absoluteY="61dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
