--- a/Android/app/src/main/res/layout/activity_conv.xml
+++ b/Android/app/src/main/res/layout/activity_conv.xml
@@ -12,10 +12,17 @@
         android:layout_height="wrap_content"
         android:text="This is conversation"
         tools:layout_editor_absoluteX="160dp"
-        tools:layout_editor_absoluteY="272dp" />
+        tools:layout_editor_absoluteY="272dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/button"/>
 
     <Button
         android:id="@+id/button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Back"
